# pose

./: .env.example  .gitignore  .npmrc  Dockerfile  README.md  architecture.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tasks.md
.cursor/rules/: coding-style.mdc  project-context.mdc  workflow.mdc
apps/mobile/: app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/app/(auth)/: sign-in.tsx  sign-up.tsx
apps/mobile/app/reference/: [id].tsx
apps/mobile/app/shoot/: [id].tsx  review.tsx
apps/mobile/modules/pose-detector/: expo-module.config.json  package.json
apps/mobile/src/camera/: CameraView.tsx  useCameraPermissions.ts
apps/mobile/src/capture/: burstBuffer.test.ts  burstBuffer.ts  saveCapture.ts  useSustainedMatch.ts
services/pose-worker/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  railway.toml
services/pose-worker/src/: callback.py  extractor.py  jobs.py  main.py  schemas.py  types.py
services/pose-worker/tests/: conftest.py  test_extract_callback.py  test_extract_endpoint.py  test_extractor.py
supabase/: config.toml
supabase/functions/enqueue-pose-extraction/: index.ts
supabase/functions/pose-worker-callback/: index.ts
supabase/migrations/: 20260520180048_create_references.sql  20260520181237_create_captures.sql  20260520183417_references_rls.sql  20260520204019_captures_rls.sql  20260520204419_reference_images_bucket.sql  20260520225427_captures_bucket.sql  20260520231557_enable_references_realtime.sql  20260522214812_references_enqueue_webhook.sql
(+37 files in other folders)
